# isopod

./: Cargo.toml  README.md  TODO.md  build.rs
.github/workflows/: rust.yml  tests.yml
src/: lib.rs  main.rs
src/env/: linexp.rs  mod.rs
src/fx/: filter.rs
src/osc/: mod.rs  noise.rs  wavetable.rs
src/osc/luts/: exp_i16.rs  exp_i32.rs  exp_i8.rs  mod.rs
src/synth/: mod.rs
src/util/: units.rs
