[package]
name = "isopod"
version = "0.1.0"
edition = "2021"
authors = ["Korbinian Schreiber"]

[build-dependencies]
num = "0.4.0"

[dependencies]
num = "0.4.3"
rodio = "0.18.0"
derive-deref-rs = "0.1.1"
derive_more = "0.99.17"


[profile.release]
# opt-level = 'z'     # Optimize for size
# lto = true          # Enable link-time optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*
